--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,10 @@
 <div class="space-y-12">
 
-    <h1>Home</h1>
+    <h1>Welcome to the app!</h1>
 
-    <%= link_to "Login", new_session_path %>
+    <%= link_to "Sign up", new_registration_path %>
+    </br>
+    <%= link_to "Sign in", new_session_path %>
 
 </div>
+
