--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+
+  <head>
+    <title>TripSplitter</title>
+    <%= stylesheet_link_tag "main" %>
+  </head>
+
   <head>
     <title><%= content_for(:title) || "Trip Splitter" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
