Make images work

--- a/app/views/theme_pages/pinwheel.html.erb
+++ b/app/views/theme_pages/pinwheel.html.erb
@@ -1,22 +1,7 @@
 <!-- floating assets -->
-<img
-  class="floating-bubble-1 absolute right-0 top-0 -z-[1]"
-  src="/images/pinwheel/floating-bubble-1.svg"
-  alt=""
-/>
-
-
-<img
-  class="floating-bubble-2 absolute left-0 top-[387px] -z-[1]"
-  src="/images/floating-bubble-2.svg"
-  alt=""
-/>
-
-<img
-  class="floating-bubble-3 absolute right-0 top-[605px] -z-[1]"
-  src="/images/floating-bubble-3.svg"
-  alt=""
-/>
+<%= image_tag "pinwheel/floating-bubble-1.svg", class: "floating-bubble-1 absolute right-0 top-0 -z-[1]" %>
+<%= image_tag "pinwheel/floating-bubble-2.svg", class: "floating-bubble-2 absolute left-0 top-[387px] -z-[1]" %>
+<%= image_tag "pinwheel/floating-bubble-3.svg", class: "floating-bubble-3 absolute right-0 top-[605px] -z-[1]" %>
 <!-- ./end floating assets -->
 
 <!-- Common hero -->
@@ -96,45 +81,19 @@
     <div class="row mt-2.5">
       <div class="md:col-6">
         <div class="relative mt-8">
-          <img
-            class="w-full object-cover"
-            width="480"
-            height="328"
-            src="/images/about/gallery-img-1.png"
-            alt=""
-          />
+          <%= image_tag "about/gallery-img-1.png", class: "w-full object-cover", width: "480", height: "328" %>
         </div>
 
         <div class="relative mt-8">
-          <img
-            class="w-full object-cover"
-            width="480"
-            height="274"
-            src="/images/about/gallery-img-2.png"
-            alt=""
-          />
-          <img
-            class="absolute -bottom-5 -left-5 -z-[1]"
-            src="/images/shape-2.svg"
-            alt=""
-          />
+          <%= image_tag "about/gallery-img-2.png", class: "w-full object-cover", width: "480", height: "274" %>
+          <%= image_tag "pinwheel/shape-2.svg", class: "absolute -bottom-5 -left-5 -z-[1]" %>
         </div>
       </div>
 
       <div class="md:col-6">
         <div class="relative mt-8">
-          <img
-            class="w-full object-cover"
-            width="480"
-            height="540"
-            src="/images/about/gallery-img-3.png"
-            alt=""
-          />
-          <img
-            class="absolute -bottom-4 -right-5 -z-[1] h-16 w-16"
-            src="/images/shape.svg"
-            alt=""
-          />
+          <%= image_tag "about/gallery-img-3.png", class: "w-full object-cover", width: "480", height: "540" %>
+          <%= image_tag "pinwheel/shape.svg", class: "absolute -bottom-4 -right-5 -z-[1] h-16 w-16", width: "480", height: "540" %>
         </div>
       </div>
     </div>
@@ -162,7 +121,7 @@
         <div class="rounded-xl bg-white p-6 shadow-lg lg:p-8">
           <div class="gradient-number relative inline-block">
             <span class="bg-gradient absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">01</span>
-            <img src="/images/gradient-number-bg.svg" alt="" />
+            <%= image_tag "pinwheel/gradient-number-bg.svg" %>
           </div>
           <h4 class="my-6">Accessibility</h4>
           <p>Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec velit neque, autor sit amet aliuam vel</p>
@@ -173,7 +132,7 @@
         <div class="rounded-xl bg-white p-6 shadow-lg lg:p-8">
           <div class="gradient-number relative inline-block">
             <span class="bg-gradient absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">02</span>
-            <img src="/images/gradient-number-bg.svg" alt="" />
+            <%= image_tag "pinwheel/gradient-number-bg.svg" %>
           </div>
           <h4 class="my-6">Empowerement</h4>
           <p>Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec velit neque, autor sit amet aliuam vel</p>
@@ -184,7 +143,7 @@
         <div class="rounded-xl bg-white p-6 shadow-lg lg:p-8">
           <div class="gradient-number relative inline-block">
             <span class="bg-gradient absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">03</span>
-            <img src="/images/gradient-number-bg.svg" alt="" />
+            <%= image_tag "pinwheel/gradient-number-bg.svg" %>
           </div>
           <h4 class="my-6">Innovation</h4>
           <p>Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec velit neque, autor sit amet aliuam vel</p>
@@ -195,7 +154,7 @@
         <div class="rounded-xl bg-white p-6 shadow-lg lg:p-8">
           <div class="gradient-number relative inline-block">
             <span class="bg-gradient absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">04</span>
-            <img src="/images/gradient-number-bg.svg" alt="" />
+            <%= image_tag "pinwheel/gradient-number-bg.svg" %>
           </div>
           <h4 class="my-6">Excellence</h4>
           <p>Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec velit neque, autor sit amet aliuam vel</p>
@@ -206,7 +165,7 @@
         <div class="rounded-xl bg-white p-6 shadow-lg lg:p-8">
           <div class="gradient-number relative inline-block">
             <span class="bg-gradient absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">05</span>
-            <img src="/images/gradient-number-bg.svg" alt="" />
+            <%= image_tag "pinwheel/gradient-number-bg.svg" %>
           </div>
           <h4 class="my-6">Team work</h4>
           <p>Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec velit neque, autor sit amet aliuam vel</p>
@@ -217,7 +176,7 @@
         <div class="rounded-xl bg-white p-6 shadow-lg lg:p-8">
           <div class="gradient-number relative inline-block">
             <span class="bg-gradient absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">06</span>
-            <img src="/images/gradient-number-bg.svg" alt="" />
+            <%= image_tag "pinwheel/gradient-number-bg.svg" %>
           </div>
           <h4 class="my-6">Responsibility</h4>
           <p>Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec velit neque, autor sit amet aliuam vel</p>
@@ -246,7 +205,7 @@
         <div class="row">
           <div class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center">
             <div class="member-avatar inline-flex justify-center">
-              <img class="rounded-full h-28 w-28" src="/images/users/user-1.png" alt="">
+              <%= image_tag "users/user-1.png", class: "rounded-full h-28 w-28" %>
             </div>
             <div class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg">
               <h5 class="font-primary">Eleanor Pena</h5>
@@ -256,7 +215,7 @@
 
           <div class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center">
             <div class="member-avatar inline-flex justify-center">
-              <img class="rounded-full h-28 w-28" src="/images/users/user-2.png" alt="">
+              <%= image_tag "users/user-2.png", class: "rounded-full h-28 w-28" %>
             </div>
             <div class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg">
               <h5 class="font-primary">Savannah Nguyen</h5>
@@ -266,7 +225,7 @@
 
           <div class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center">
             <div class="member-avatar inline-flex justify-center">
-              <img class="rounded-full h-28 w-28" src="/images/users/user-3.png" alt="">
+              <%= image_tag "users/user-3.png", class: "rounded-full h-28 w-28" %>
             </div>
             <div class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg">
               <h5 class="font-primary">Courtney Henry</h5>
@@ -276,7 +235,7 @@
 
           <div class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center">
             <div class="member-avatar inline-flex justify-center">
-              <img class="rounded-full h-28 w-28" src="/images/users/user-4.png" alt="">
+              <%= image_tag "users/user-4.png", class: "rounded-full h-28 w-28" %>
             </div>
             <div class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg">
               <h5 class="font-primary">Floyd Miles</h5>
@@ -286,7 +245,7 @@
 
           <div class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center">
             <div class="member-avatar inline-flex justify-center">
-              <img class="rounded-full h-28 w-28" src="/images/users/user-5.png" alt="">
+              <%= image_tag "users/user-5.png", class: "rounded-full h-28 w-28" %>
             </div>
             <div class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg">
               <h5 class="font-primary">Robert Fox</h5>
@@ -296,7 +255,7 @@
 
           <div class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center">
             <div class="member-avatar inline-flex justify-center">
-              <img class="rounded-full h-28 w-28" src="/images/users/user-6.png" alt="">
+              <%= image_tag "users/user-6.png", class: "rounded-full h-28 w-28" %>
             </div>
             <div class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg">
               <h5 class="font-primary">Darrell Steward</h5>
